crates/errors/src/snapshots/gmeow_errors__render__tests__advisory_html_snapshot.snap
---
source: crates/errors/src/render.rs
expression: to_html(&advisory_report())
---
<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>validate diagnostics</title>
  <style>
    body { font-family: system-ui, sans-serif; margin: 2rem; color: #17202a; }
    h1 { font-size: 1.5rem; margin-bottom: 0.25rem; }
    .summary { color: #4b5563; margin-bottom: 1rem; }
    table { border-collapse: collapse; width: 100%; }
    th, td { border-bottom: 1px solid #d8dee9; padding: 0.5rem; text-align: left; vertical-align: top; }
    th { background: #f3f4f6; }
    .sev { border-radius: 4px; color: white; display: inline-block; font-size: 0.8rem; min-width: 4.5rem; padding: 0.2rem 0.4rem; text-align: center; }
    .sev-error { background: #b42318; }
    .sev-warning { background: #b54708; }
    .sev-note, .sev-info { background: #175cd3; }
    .suggestions { margin: 0.25rem 0 0 0; padding-left: 1.2rem; color: #4b5563; font-size: 0.9rem; }
    .help { color: #175cd3; font-size: 0.85rem; margin-left: 0.4rem; text-decoration: none; }
    .help:hover { text-decoration: underline; }
  </style>
</head>
<body>
  <h1>validate diagnostics</h1>
  <p class="summary">0 error(s), 0 warning(s), 1 total finding(s)</p>
  <table>
    <thead><tr><th>Severity</th><th>Code</th><th>Message</th><th>Location</th></tr></thead>
    <tbody>
<tr><td><span class="sev sev-note">note</span></td><td>advice.sample</td><td>consider a more specific sortal<ul class="suggestions"><li>see the modeling guide</li><li>use gmeow:Kind for rigid sortals</li></ul><a class="help" href="https://blackcatinformatics.ca/gmeow/advice#sample">ℹ help</a></td><td></td></tr>
    </tbody>
  </table>
</body>
</html>
