crates/errors/src/snapshots/gmeow_errors__render__tests__advisory_text_snapshot.snap
---
source: crates/errors/src/render.rs
expression: to_text(&advisory_report())
---
note advice.sample: consider a more specific sortal
  ↳ suggestion: see the modeling guide
  ↳ suggestion: use gmeow:Kind for rigid sortals
  ↳ help: https://blackcatinformatics.ca/gmeow/advice#sample
