crates/errors/src/snapshots/gmeow_errors__render__tests__gmeow_rdf_full_snapshot.snap
---
source: crates/errors/src/render.rs
assertion_line: 1382
expression: to_gmeow_rdf(&comprehensive_report())
---
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/gmeow/Finding> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <http://www.w3.org/2000/01/rdf-schema#label> "shacl.MinCount: missing property" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <http://www.w3.org/2000/01/rdf-schema#isDefinedBy> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/graphBoxRole> <https://blackcatinformatics.ca/gmeow/boxABox> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/findingSeverity> <https://blackcatinformatics.ca/gmeow/severityError> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/findingCode> "shacl.MinCount" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/findingMessage> "missing property" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/findingTool> "shacl" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0> <https://blackcatinformatics.ca/gmeow/findingLocation> <https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0/location/0> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0/location/0> <https://blackcatinformatics.ca/gmeow/gtsQuadIndex> "42"^^<http://www.w3.org/2001/XMLSchema#nonNegativeInteger> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0/location/0> <https://blackcatinformatics.ca/gmeow/gtsSegmentIndex> "2"^^<http://www.w3.org/2001/XMLSchema#nonNegativeInteger> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/1a45975eee1afc5f-0/location/0> <https://blackcatinformatics.ca/gmeow/findingLocationPath> "bundle.gts" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/gmeow/Finding> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <http://www.w3.org/2000/01/rdf-schema#label> "shacl.MinCount: missing property" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <http://www.w3.org/2000/01/rdf-schema#isDefinedBy> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/graphBoxRole> <https://blackcatinformatics.ca/gmeow/boxABox> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/findingSeverity> <https://blackcatinformatics.ca/gmeow/severityError> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/findingCode> "shacl.MinCount" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/findingMessage> "missing property" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/findingTool> "shacl" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1> <https://blackcatinformatics.ca/gmeow/findingLocation> <https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1/location/0> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1/location/0> <https://blackcatinformatics.ca/gmeow/findingLocationPath> "core/ai/examples/grounded-claim.ttl" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1/location/0> <https://blackcatinformatics.ca/gmeow/findingLocationLine> "12"^^<http://www.w3.org/2001/XMLSchema#nonNegativeInteger> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/5b5b3cf07de70c17-1/location/0> <https://blackcatinformatics.ca/gmeow/findingLocationColumn> "3"^^<http://www.w3.org/2001/XMLSchema#nonNegativeInteger> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://blackcatinformatics.ca/gmeow/Finding> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <http://www.w3.org/2000/01/rdf-schema#label> "validate.warning: class gmeow:Analogy is missing gmeow:howToUse" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <http://www.w3.org/2000/01/rdf-schema#isDefinedBy> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <https://blackcatinformatics.ca/gmeow/graphBoxRole> <https://blackcatinformatics.ca/gmeow/boxABox> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <https://blackcatinformatics.ca/gmeow/findingSeverity> <https://blackcatinformatics.ca/gmeow/severityWarning> <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <https://blackcatinformatics.ca/gmeow/findingCode> "validate.warning" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <https://blackcatinformatics.ca/gmeow/findingMessage> "class gmeow:Analogy is missing gmeow:howToUse" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
<https://blackcatinformatics.ca/gmeow/diagnostics/finding/713f947ffc5ec1e5-2> <https://blackcatinformatics.ca/gmeow/findingTool> "validate" <https://blackcatinformatics.ca/gmeow/graph/diagnostics> .
