crates/errors/src/snapshots/gmeow_errors__render__tests__html_full_snapshot.snap
---
source: crates/errors/src/render.rs
expression: to_html(&comprehensive_report())
---
<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <title>validate diagnostics</title>
  <style>
    body { font-family: system-ui, sans-serif; margin: 2rem; color: #17202a; }
    h1 { font-size: 1.5rem; margin-bottom: 0.25rem; }
    .summary { color: #4b5563; margin-bottom: 1rem; }
    table { border-collapse: collapse; width: 100%; }
    th, td { border-bottom: 1px solid #d8dee9; padding: 0.5rem; text-align: left; vertical-align: top; }
    th { background: #f3f4f6; }
    .sev { border-radius: 4px; color: white; display: inline-block; font-size: 0.8rem; min-width: 4.5rem; padding: 0.2rem 0.4rem; text-align: center; }
    .sev-error { background: #b42318; }
    .sev-warning { background: #b54708; }
    .sev-note, .sev-info { background: #175cd3; }
  </style>
</head>
<body>
  <h1>validate diagnostics</h1>
  <p class="summary">2 error(s), 1 warning(s), 3 total finding(s)</p>
  <table>
    <thead><tr><th>Severity</th><th>Code</th><th>Message</th><th>Location</th></tr></thead>
    <tbody>
<tr><td><span class="sev sev-error">error</span></td><td>shacl.MinCount</td><td>missing property</td><td>bundle.gts quad#42 segment#2</td></tr>
<tr><td><span class="sev sev-error">error</span></td><td>shacl.MinCount</td><td>missing property</td><td>core/ai/examples/grounded-claim.ttl:12:3</td></tr>
<tr><td><span class="sev sev-warning">warning</span></td><td>validate.warning</td><td>class gmeow:Analogy is missing gmeow:howToUse</td><td></td></tr>
    </tbody>
  </table>
</body>
</html>
