crates/errors/src/snapshots/gmeow_errors__render__tests__sarif_full_snapshot.snap
---
source: crates/errors/src/render.rs
assertion_line: 1370
expression: value
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [
        {
          "location": {
            "uri": "bundle.gts"
          }
        },
        {
          "location": {
            "uri": "core/ai/examples/grounded-claim.ttl"
          }
        }
      ],
      "automationDetails": {
        "id": "ontology"
      },
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "gts:quad/42",
                  "kind": "gts:quad",
                  "name": "quad#42"
                },
                {
                  "fullyQualifiedName": "gts:segment/2",
                  "kind": "gts:segment",
                  "name": "segment#2"
                }
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "bundle.gts"
                }
              },
              "properties": {
                "gts.quadIndex": 42,
                "gts.segmentIndex": 2
              }
            }
          ],
          "message": {
            "text": "missing property"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "1a45975eee1afc5f"
          },
          "ruleId": "shacl.MinCount"
        },
        {
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "https://blackcatinformatics.ca/gmeow/examples/ai/claim"
                },
                {
                  "fullyQualifiedName": "path https://blackcatinformatics.ca/gmeow/groundedIn"
                }
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "core/ai/examples/grounded-claim.ttl"
                },
                "region": {
                  "startColumn": 3,
                  "startLine": 12
                }
              }
            }
          ],
          "message": {
            "text": "missing property"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "5b5b3cf07de70c17"
          },
          "properties": {
            "gmeow.attributions": [
              {
                "role": "focus-origin",
                "sliceIri": "https://blackcatinformatics.ca/gmeow/slices/ext/data"
              },
              {
                "evidence": "slices/core/shapes/shapes.ttl",
                "role": "shape-owner",
                "sliceIri": "https://blackcatinformatics.ca/gmeow/slices/core/shapes"
              }
            ]
          },
          "ruleId": "shacl.MinCount"
        },
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "ontology/gmeow.ttl"
                }
              },
              "properties": {
                "gmeow.syntheticPhysicalLocation": true,
                "gmeow.syntheticPhysicalLocationReason": "logical-only diagnostic anchor"
              }
            }
          ],
          "message": {
            "text": "class gmeow:Analogy is missing gmeow:howToUse"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "713f947ffc5ec1e5"
          },
          "ruleId": "validate.warning"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/Blackcat-Informatics/gmeow-ontology",
          "name": "validate",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "shacl.MinCount"
            },
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "validate.warning"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
