crates/errors/src/snapshots/gmeow_errors__render__tests__sarif_stale_cache_primary_promotion_snapshot.snap
---
source: crates/errors/src/render.rs
assertion_line: 1398
expression: value
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [
        {
          "location": {
            "uri": "core/ai/examples/grounded-claim.ttl"
          }
        }
      ],
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "https://blackcatinformatics.ca/gmeow/examples/ai/claim"
                },
                {
                  "fullyQualifiedName": "path https://blackcatinformatics.ca/gmeow/groundedIn"
                }
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "core/ai/examples/grounded-claim.ttl"
                }
              }
            }
          ],
          "message": {
            "text": "missing property"
          },
          "partialFingerprints": {
            "gmeowFindingHash/v2": "54581853a34ebd04"
          },
          "ruleId": "shacl.MinCount"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/Blackcat-Informatics/gmeow-ontology",
          "name": "validate",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "shacl.MinCount"
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
