crates/errors/src/snapshots/gmeow_errors__render__tests__text_full_snapshot.snap
---
source: crates/errors/src/render.rs
expression: to_text(&comprehensive_report())
---
error shacl.MinCount: missing property (bundle.gts quad#42 segment#2)
error shacl.MinCount: missing property (core/ai/examples/grounded-claim.ttl:12:3)
warning validate.warning: class gmeow:Analogy is missing gmeow:howToUse
